--- a/css/subpagina.css
+++ b/css/subpagina.css
@@ -12,9 +12,14 @@
     margin: 0 auto;
 }
 
+.miraculousdot {
+    margin-bottom: 6rem;
+}
+
 .subpagina-head {
     width: 1440px;
     display: flex;
+    margin-top: 7rem;
 }
 
 .subpagina-imagem img {
@@ -134,6 +139,18 @@ b {
     color: white;
 }
 
+@media screen and (max-width:1160px){
+    .subpagina-download {
+        margin-top: 4rem;
+    }
+}
+
+@media screen and (max-width: 1132px){
+    .miraculousdot {
+        margin-bottom: 15rem;
+    }
+}
+
 @media screen and (max-width: 940px){
     .subpagina-download {
         margin-top: 4rem;
@@ -165,5 +182,7 @@ b {
         border: 2px solid red;
     }
 
-
+    .miraculousdot {
+        margin-bottom: 17rem;
+    }
 }
